@@ -1,10 +1,10 @@
 Package: PNetica
-Version: 0.6-1
-Date: 2019/07/20
+Version: 0.6-2
+Date: 2019/07/31
 Title: Parameterized Bayesian Networks Netica Interface
 Author: Russell Almond
 Maintainer: Russell Almond <ralmond@fsu.edu>
-Depends: R (>= 3.0), RNetica (>= 0.5), CPTtools (>= 0.4), Peanut (>= 0.5)
+Depends: R (>= 3.0), RNetica (>= 0.7), CPTtools (>= 0.5), Peanut (>= 0.6), futile.logger
 Description: This package provides RNetica implementation of Peanut interface.
 License: Artistic-2.0 
 URL: http://pluto.coe.fsu.edu/RNetica
